route-reviews-v1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: reviews
      sectionName: http
  rules:
    - backendRefs:
        - name: reviews-v1
          port: 9080
