route-reviews-v2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: reviews
      sectionName: http
  rules:
    - matches:
      - headers:
          - name: end-user
            value: vijay
      backendRefs:
        - name: reviews-v2
          port: 9080
    - backendRefs:
      - name: reviews-v1
        port: 9080
